--- a/LeckerBag/WebContent/index.html
+++ b/LeckerBag/WebContent/index.html
@@ -11,67 +11,76 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">         
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
     </head>     
-    <body> 
-        <div class="row text-right" id="nav_sn" data-pg-collapsed> 
-            <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a> 
-            <a href="#" class="nav_sn_link"><i class="fa fa-twitter"></i></a> 
-            <a href="#" class="nav_sn_link"><i class="fa fa-google-plus"></i></a> 
-            <a href="#" class="nav_sn_link"><i class="fa fa-tumblr"></i></a> 
+    <body>
+        <div class="row">
+            <div class="text-right col-md-12" id="nav_sn" data-pg-collapsed>
+                <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a>
+                <a href="#" class="nav_sn_link"><i class="fa fa-twitter"></i></a>
+                <a href="#" class="nav_sn_link"><i class="fa fa-google-plus"></i></a>
+                <a href="#" class="nav_sn_link"><i class="fa fa-tumblr"></i></a> 
+            </div>             
         </div>         
-        <div class="row" id="logo"> 
-            <div class="col-md-4 text-center" id="logo_left"> 
-                <h5 class="">Willkommen</h5> 
+        <div class="row" id="logo" data-pg-collapsed> 
+            <div class="col-md-4 text-center hidden-sm hidden-xs" id="logo_left">
+                <h5>Herzlich</h5>
             </div>             
             <div class="col-md-4 text-center" id="logo_inner"> 
-                <img src="pics/logo_red.png" class="" style="padding-top:20px; padding-bottom:20px" height="300"/>                 
+                <img src="pics/logo_white.png" style="padding-top:20px; padding-bottom:20px" height="300">
             </div>             
-            <div class="col-md-4 text-center" id="logo_right"> 
-                <h5>Registrieren | Login</h5> 
+            <div class="col-md-4 text-center hidden-xs hidden-sm" id="logo_right">
+                <h5>Willkommen</h5>
             </div>             
         </div>         
         <div class="container"> 
 </div>         
         <div class="container"> 
-</div>         
-        <div class="row" data-pg-collapsed> 
-            <nav class="navbar navbar-default nav_button" role="navigation"> 
-                <div class="container-fluid"> 
-                    <div class="navbar-header" data-pg-collapsed> 
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" data-pg-collapsed> 
-                            <span class="sr-only">Toggle navigation</span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span> 
-                            <span class="icon-bar"></span> 
-                        </button>                         
+</div>
+        <div class="row">
+            <div class="col-md-12">
+                <nav class="navbar navbar-default nav_button" role="navigation"> 
+                    <div class="container-fluid" id="navigation_bar"> 
+                        <div class="navbar-header" data-pg-collapsed> 
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" data-pg-collapsed> 
+                                <span class="sr-only">Toggle navigation</span> 
+                                <span class="icon-bar"></span> 
+                                <span class="icon-bar"></span> 
+                                <span class="icon-bar"></span> 
+                            </button>                             
+                        </div>                         
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" data-pg-collapsed> 
+                            <ul class="nav navbar-nav"> 
+                                <li class="active nav_item_first"> 
+                                    <a href="#">Startseite</a> 
+                                </li>                                 
+                                <li class="nav_item_middle"> 
+                                    <a href="#">Suche</a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="#">Mein Leckerbag</a> 
+                                </li>                                 
+                                <li class="nav_item_middle"> 
+                                    <a href="#">Über Uns</a> 
+                                </li>                                 
+                                <li class="nav_item_last"> 
+                                    <a href="#">Kontakt</a> 
+                                </li>                                 
+                                <li class="nav_item_last"> 
+                                    <a href="#">Registrieren</a> 
+                                </li>                                 
+                            </ul>                             
+                        </div>                         
                     </div>                     
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
-                        <ul class="nav navbar-nav"> 
-                            <li class="active nav_item_first"> 
-                                <a href="#">Startseite</a> 
-                            </li>                             
-                            <li class="nav_item_middle"> 
-                                <a href="#">Suche</a> 
-                            </li>                             
-                            <li> 
-                                <a href="#">Mein Leckerbag</a> 
-                            </li>                             
-                            <li class="nav_item_middle"> 
-                                <a href="#">Über Uns</a> 
-                            </li>                             
-                            <li class="nav_item_last"> 
-                                <a href="#">Kontakt</a> 
-                            </li>                             
-                        </ul>                         
-                    </div>                     
-                </div>                 
-            </nav>             
-        </div>         
-        <div class="container text-center" style="padding-top:50px; padding-bottom:50px" data-pg-collapsed> 
-            <div class="row"> 
-                <div class="col-xs-6"> 
-                    <i class="fa fa-users fa-4x"></i> 
-                    <h3>Als Kunde...</h3> 
-                    <p>Wir von Leckerbag sorgen für eine gesunde und transparente 
+                </nav>                 
+            </div>             
+        </div>
+        <div class="row" data-pg-collapsed>
+            <div class="col-md-12" data-pg-collapsed>
+                <div class="container text-center" style="padding-top:50px; padding-bottom:50px" data-pg-collapsed> 
+                    <div class="row" data-pg-collapsed> 
+                        <div class="col-md-6"> 
+                            <i class="fa fa-users fa-4x"></i> 
+                            <h3>Als Kunde...</h3> 
+                            <p>Wir von Leckerbag sorgen für eine gesunde und transparente 
 Pausenernährung Ihrer Kinder. Stellen 
 Sie bequem online Pausensnacks und Getränke zusammen. Um die frische 
 Zubereitung und Auslieferung unserer hoch qualitativen und gleichzeitig 
@@ -79,12 +88,12 @@ preiswerten Produkte, kümmern sich unsere ausgewählten Partner.
 Vergessen Sie die bisherigen Verpflegungsmöglichkeiten an den Schulen 
 und versorgen Sie ihr Kind ohne zeitlichen Mehraufwand mit einem 
 gesunden Frühstück..</p> 
-                    <button type="button" class="btn btn-default button_paulo">erfahren Sie mehr</button>                     
-                </div>                 
-                <div class="col-xs-6"> 
-                    <i class="fa fa-truck fa-4x"></i> 
-                    <h3>Als Lieferant...</h3> 
-                    <p>Sie sind Bäcker, Fleischer oder Catering-Unternehmer und möchten ein 
+                            <button type="button" class="btn btn-default button_paulo">erfahren Sie mehr</button>                             
+                        </div>                         
+                        <div class="col-md-6"> 
+                            <i class="fa fa-truck fa-4x"></i> 
+                            <h3>Als Lieferant...</h3> 
+                            <p>Sie sind Bäcker, Fleischer oder Catering-Unternehmer und möchten ein 
 neues Geschäftsfeld für sich entdecken?
  Wir als junges Start-Up möchten es mit Ihrer Unterstützung ermöglichen,
  Schulen mit täglich frischen und leckeren Pausensnacks zu beliefern. 
@@ -92,14 +101,43 @@ Wir entlasten Ihr Unternehmen indem wir uns um die Organisation, sowie
 die Abwicklung eines reibungslosen bargeldlosen Zahlungsverkehrs 
 kümmern. Falls wir Ihr Interesse geweckt haben, kontaktieren Sie uns und
  wir stehen für weitere Fragen in...</p> 
-                    <button type="button" class="btn btn-default button_paulo">erfahren Sie mehr</button>                     
+                            <button type="button" class="btn btn-default button_paulo">erfahren Sie mehr</button>                             
+                        </div>                         
+                    </div>                     
                 </div>                 
-            </div>             
-        </div>
-        <div class="row" id="start_abschnitt_1"> 
+            </div>
+        </div>         
+        <div class="row" id="start_abschnitt_1" data-pg-collapsed> 
             <div class="container"> 
                 <h1>Entwickelt, um dein Leben zu bereichern</h1> 
                 <h4>Jede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
+Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
+Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
+zur automatischen Zusammenstellung nutzenJede Leckerbag setzt sich aus einem Pausenbrot, 
 Getränk und Obst Ihrer Wahl zusammen. Den Inhalt Ihrer Leckerbag können 
 Sie stets individuell zusammenstellen, oder aber unseren Konfigurator 
 zur automatischen Zusammenstellung nutzen</h4> 
@@ -108,5 +146,6 @@ zur automatischen Zusammenstellung nutzen</h4>
         <!-- Ende des Dokumentes -->         
         <script src="js/jquery.js"></script>         
         <script src="js/bootstrap.js"></script>         
+        <script src="js/functions.js"></script>         
     </body>     
 </html>
