--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -12,7 +12,7 @@
         <link href="css/bootstrap-responsive.css" rel="stylesheet">         
     </head>     
     <body>
-        <div class="row" data-pg-collapsed>
+        <div class="row">
             <div class="text-right col-md-12" id="nav_sn">
                 <a href="#" class="nav_sn_link"><i class="fa fa-facebook"></i></a>
                 <a href="#" class="nav_sn_link"><i class="fa fa-twitter"></i></a>
@@ -22,21 +22,19 @@
         </div>         
         <div class="row" id="logo"> 
             <div class="col-md-4 hidden-sm hidden-xs text-right" id="logo_left">
-                <h4>Herzlich</h4>
-            </div>             
+</div>             
             <div class="col-md-4 text-center" id="logo_inner"> 
                 <img src="pics/logo_white.png" style="padding-top:20px; padding-bottom:20px" height="300">
             </div>             
             <div class="col-md-4 hidden-xs hidden-sm text-left" id="logo_right">
-                <h4>Willkommen</h4>
-            </div>             
+</div>             
         </div>         
         <div class="container"> 
 </div>         
         <div class="container"> 
 </div>
         <div class="row" data-pg-collapsed>
-            <div class="col-md-12" data-pg-collapsed>
+            <div class="col-md-12">
                 <nav class="navbar navbar-default nav_button" role="navigation"> 
                     <div class="container-fluid" id="navigation_bar"> 
                         <div class="navbar-header" data-pg-collapsed> 
@@ -48,7 +46,7 @@
                             </button>                             
                         </div>                         
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
-                            <ul class="nav navbar-nav"> 
+                            <ul class="nav navbar-nav navbar_container"> 
                                 <li class="active nav_item"> 
                                     <a href="#">Startseite</a> 
                                 </li>                                 
@@ -79,7 +77,7 @@
                     <div class="row" data-pg-collapsed>
                         <div class="content_header_element col-md-10 col-sm-10 col-xs-10 col-lg-10" data-pg-collapsed>
                             <h3>Mein Leckerbag</h3> 
-                            <p>Herzlich Willkommen User!</p> 
+                            <p>Herzlich Willkommen Max Mustermann!</p> 
                         </div>
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
@@ -89,68 +87,66 @@
                     </div>
                     <hr class="hr_line"/>
                     <div class="row">
-                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col">
+                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col" data-pg-collapsed>
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Mein Profil</h4>
                                     <h5>Ihre persönlichen Daten</h5>
-                                    <ul class="pg-empty-placeholder">
-                                        <li>
+                                    <ul class="pg-empty-placeholder" data-pg-collapsed>
+                                        <li class="list_text">
                                             <a color="#5b586b">Profil ansehen</a>
                                         </li>
-                                        <li>
+                                        <li class="list_text">
                                             <a color="#5b586b">Profil bearbeiten</a>
                                         </li>
-                                        <li>
+                                        <li class="list_text"> 
                                             <a color="#23527c">Profil löschen</a>
                                         </li>
                                     </ul>
                                     <h5>Ihre Kinder</h5>
                                     <ul class="pg-empty-placeholder">
-                                        <li>
+                                        <li class="list_text">
                                             <a>Kind hinzufügen</a>
                                         </li>
-                                        <li>
+                                        <li class="list_text">
                                             <a>Kind(er) ansehen</a>
                                         </li>
-                                        <li>
-                                            <font color="#5b586b">Kind(er) bearbeiten</font>
+                                        <li class="list_text">
+                                            <a color="#5b586b">Kind(er) bearbeiten</a>
                                         </li>
-                                        <li>
-                                            <font color="#5b586b">Kind(er) löschen</font>
+                                        <li class="list_text">
+                                            <a color="#5b586b">Kind(er) löschen</a>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col" data-pg-collapsed>
+                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Meine Abonnements</h4>
-                                    <h5>Letzte Abonnements</h5>
-                                    <ul class="pg-empty-placeholder" data-pg-collapsed="">
-                                        <li>
-                                            <a>Link</a>
+                                    <h5>Ihre letzten Abonnements</h5>
+                                    <ul class="pg-empty-placeholder">
+                                        <li data-pg-collapsed class="abonnement_element">
+                                            <p color="#5b586b">30-Tage-Abonnement / Kind: <a>Arnold Mustermann</a> <br> Laufzeit: 25.07.15<br><font class="preisfarbe"> EUR 24,95 </font> (<a>Abonnementetails</a>)</p>
+                                            <button type="button" class="btn btn-default button_paulo">nochmals bestellen</button>
+                                        </li>
+                                        <li data-pg-collapsed class="abonnement_element">
+                                            <p color="#5b586b">60-Tage-Abonnement / Kind: <a>Bernadette Mustermann</a><br>Laufzeit: 01.09.15 <br><font class="preisfarbe"> EUR 40,95 </font> (<a>Abonnementetails</a>)</p>
+                                            <button type="button" class="btn btn-default button_paulo">nochmals bestellen</button>
                                         </li>
                                         <li>
-                                            <a>Link</a>
-                                        </li>
-                                        <li>
-                                            <a>Link</a>
+                                            <button type="button" class="btn btn-default button_paulo button_paulo_ext_dashboard">neues Abonnement abschließen 
+                                                <i class="fa fa-chevron-right"></i> 
+                                            </button>
                                         </li>
                                     </ul>
-                                    <h5>Ihre Kinder</h5>
-                                    <ul class="pg-empty-placeholder" data-pg-collapsed="">
-                                        <li>
-                                            <a>Link</a>
-                                        </li>
-                                        <li>
-                                            <a>Link</a>
-                                        </li>
-                                        <li>
-                                            <a>Link</a>
-                                        </li>
-                                    </ul>                                     
+                                    <hr class="hr_line hr_line_ext_dashboard"/>
+                                    <div class="row" data-pg-collapsed>
+                                        <div class="col-md-12">
+                                            <a>Alle Abonnements anzeigen</a> 
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -241,6 +237,40 @@
                         </div>
                     </div>
                 </div>                 
+            </div>
+        </div>
+        <div class="row" data-pg-collapsed>
+            <div id="footer">
+                <div class="container">
+                    <div class="row">
+                        <div class="text-center col-md-3" data-pg-collapsed="">
+                            <img src="pics/logo_grey.png" style="padding-top:20px; padding-bottom:20px" height="150">                             
+                        </div>
+                        <div class="col-md-9">
+                            <div class="row">
+                                <div class="col-md-6" data-pg-collapsed="">
+                                    <h4>Julius-Maximilians-Universität Würzburg</h4> 
+                                    <p class="bodytext">Sanderring 2<br>97070 Würzburg<br>Tel. 0931/31-0<br>Fax: 0931/31-82600&nbsp;</p>
+                                </div>
+                                <div class="col-md-6" data-pg-collapsed="">
+                                    <h4>LeckerBag - Ein Projekt von:<br></h4> 
+                                    <p>Lehrstuhl für Wirtschaftsinformatik und Systementwicklung</p>
+                                    <p class="bodytext"></p>
+                                    <p class="bodytext">Hubland Nord, Gebäude 32<br>Emil-Fischer-Straße 32<br>D-97074 Würzburg &nbsp;</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="hr_line hr_line_ext_footer">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6">
+                            <p>© LeckerBag, Uni-Würzburg. All rights reserved. <a href="http://windycitycrossfit.com/sitecredits">Site credits</a><br></p> 
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
+                            <p>info@leckerbag.de</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>         
         <!-- Ende des Dokumentes -->         
