--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -82,7 +82,7 @@
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a id="help_text">benötigen Sie hilfe?</a>
+                            <a>benötigen Sie hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
@@ -298,7 +298,7 @@
                             <p>© LeckerBag, Uni-Würzburg. All rights reserved. <a href="http://windycitycrossfit.com/sitecredits">Site credits</a><br></p> 
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
-                            <p>info@leckerbag.de</p>
+                            <a>info@leckerbag.de</a>
                         </div>
                     </div>
                 </div>
