--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -158,38 +158,38 @@
                                     <h4>Meine Bestellungen</h4>
                                     <h5>Ihre nächsten Lieferungen</h5>
                                     <div class="row">
-                                        <div class="col-md-8 col-sm-8 col-xs-8 col-lg-8" data-pg-collapsed>
+                                        <div class="col-lg-8 col-md-8 col-sm-7 col-xs-7" data-pg-collapsed>
                                             <ul class="pg-empty-placeholder">
                                                 <li class="abonnement_element" data-pg-collapsed>
                                                     <p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652001</a> Brötchen mit Salami, Apfel, Milch <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a>Bestelldetails</a>)</p>
                                                 </li>
                                             </ul>                                             
                                         </div>
-                                        <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4 text-left">
+                                        <div class="col-md-4 col-lg-4 text-left col-xs-5 col-sm-5">
                                             <button type="button" class="btn btn-default button_paulo">stornieren</button>                                             
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-8 col-sm-8 col-xs-8 col-lg-8" data-pg-collapsed>
+                                        <div class="col-md-8 col-lg-8 col-xs-7 col-sm-7" data-pg-collapsed>
                                             <ul class="pg-empty-placeholder">
                                                 <li class="abonnement_element">
                                                     <p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a>Bestelldetails</a>)</p>
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4 text-left">
+                                        <div class="col-md-4 col-lg-4 text-left col-sm-5 col-xs-5">
                                             <button type="button" class="btn btn-default button_paulo">stornieren</button>                                             
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <div class="col-md-8 col-sm-8 col-xs-8 col-lg-8">
+                                        <div class="col-md-8 col-lg-8 col-sm-7 col-xs-7">
                                             <ul class="pg-empty-placeholder" data-pg-collapsed="">
                                                 <li class="abonnement_element">
                                                     <p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652002</a> Brötchen mit Schinken und Käse, Banane, Milch <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>02.09.15<br>(<a>Bestelldetails</a>)</p>
                                                 </li>
                                             </ul>
                                         </div>
-                                        <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4 text-left">
+                                        <div class="col-md-4 col-lg-4 text-left col-sm-5 col-xs-5">
                                             <button type="button" class="btn btn-default button_paulo">stornieren</button>                                             
                                         </div>
                                     </div>
