--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -9,7 +9,8 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
         <link href="css/bootstrap.css" rel="stylesheet">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>         
     </head>     
     <body>
         <div class="row">
@@ -33,7 +34,7 @@
 </div>         
         <div class="container"> 
 </div>
-        <div class="row" data-pg-collapsed>
+        <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-default nav_button" role="navigation"> 
                     <div class="container-fluid" id="navigation_bar"> 
@@ -48,13 +49,13 @@
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
                             <ul class="nav navbar-nav navbar_container"> 
                                 <li class="active nav_item"> 
-                                    <a href="#">Startseite</a> 
+                                    <a href="index.html">Startseite</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
                                     <a href="#">Suche</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
-                                    <a href="#">Mein Leckerbag</a> 
+                                    <a href="dashboard_kunde.html">Mein Leckerbag</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
                                     <a href="#">Über Uns</a> 
@@ -270,7 +271,7 @@
                 </div>                 
             </div>
         </div>
-        <div class="row" data-pg-collapsed>
+        <div class="row">
             <div id="footer">
                 <div class="container">
                     <div class="row">
@@ -295,7 +296,7 @@
                     <hr class="hr_line hr_line_ext_footer">
                     <div class="row">
                         <div class="col-md-6 col-sm-6 col-xs-6 col-lg-6">
-                            <p>© LeckerBag, Uni-Würzburg. All rights reserved. <a href="http://windycitycrossfit.com/sitecredits">Site credits</a><br></p> 
+                            <p>© LeckerBag, Uni-Würzburg. All rights reserved. <a href="impressum.html">Site credits</a><br></p> 
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
                             <a>info@leckerbag.de</a>
