Update nach Besprechung

--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -48,13 +48,13 @@
                         </div>                         
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
                             <ul class="nav navbar-nav navbar_container"> 
-                                <li class="active nav_item"> 
+                                <li class="nav_item"> 
                                     <a href="index.html">Startseite</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
-                                    <a href="#">Suche</a> 
+                                    <a href="suche.html">Suche</a> 
                                 </li>                                 
-                                <li class="nav_item"> 
+                                <li class="active nav_item"> 
                                     <a href="dashboard_kunde.html">Mein Leckerbag</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
@@ -64,7 +64,7 @@
                                     <a href="#">Kontakt</a> 
                                 </li>                                 
                                 <li class="nav_item_last"> 
-                                    <a href="#">Registrieren</a> 
+                                    <a href="login.html">Registrieren</a> 
                                 </li>                                 
                             </ul>                             
                         </div>                         
@@ -83,19 +83,19 @@
                         <div class="content_header_element text-right col-md-2 col-sm-2 col-xs-2 col-lg-2" data-pg-collapsed>
                             <a href="#" class=""><i class="fa fa-question-circle fa-2x" id="help_icon"></i></a>
                             <br/>
-                            <a>benötigen Sie hilfe?</a>
+                            <a>benötigen Sie Hilfe?</a>
                         </div>
                     </div>
                     <hr class="hr_line"/>
                     <div class="row">
-                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col" data-pg-collapsed>
+                        <div class="col-sm-12 col-xs-12 col-md-6 col-lg-6 dash_element_col">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
                                     <h4>Mein Profil</h4>
                                     <h5>Ihre persönlichen Daten</h5>
-                                    <ul class="pg-empty-placeholder" data-pg-collapsed>
+                                    <ul class="pg-empty-placeholder">
                                         <li class="list_text">
-                                            <a color="#5b586b">Profil ansehen</a>
+                                            <a color="#5b586b" href="mein_profil_kunde.html">Profil ansehen</a>
                                         </li>
                                         <li class="list_text">
                                             <a color="#5b586b">Profil bearbeiten</a>
