--- a/LeckerBag/WebContent/impressum.html
+++ b/LeckerBag/WebContent/impressum.html
@@ -48,11 +48,11 @@
                         </div>                         
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> 
                             <ul class="nav navbar-nav navbar_container"> 
-                                <li class="active nav_item"> 
+                                <li class="nav_item"> 
                                     <a href="index.html">Startseite</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
-                                    <a href="#">Suche</a> 
+                                    <a href="suche.html">Suche</a> 
                                 </li>                                 
                                 <li class="nav_item">
                                     <a href="dashboard_kunde.html">Mein Leckerbag</a> 
@@ -64,7 +64,7 @@
                                     <a href="#">Kontakt</a> 
                                 </li>                                 
                                 <li class="nav_item_last"> 
-                                    <a href="#">Registrieren</a> 
+                                    <a href="login.html">Registrieren</a> 
                                 </li>                                 
                             </ul>                             
                         </div>                         
