--- a/LeckerBag/WebContent/index.html
+++ b/LeckerBag/WebContent/index.html
@@ -52,7 +52,7 @@
                                     <a href="index.html">Startseite</a> 
                                 </li>                                 
                                 <li class="nav_item"> 
-                                    <a href="#">Suche</a> 
+                                    <a href="suche.html">Suche</a> 
                                 </li>                                 
                                 <li class="nav_item">
                                     <a href="dashboard_kunde.html">Mein Leckerbag</a> 
@@ -64,7 +64,7 @@
                                     <a href="#">Kontakt</a> 
                                 </li>                                 
                                 <li class="nav_item_last"> 
-                                    <a href="#">Registrieren</a> 
+                                    <a href="login.html">Registrieren</a> 
                                 </li>                                 
                             </ul>                             
                         </div>                         
@@ -83,20 +83,20 @@
                     <div class="row" id="startseite_c1">
                         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12" data-pg-collapsed>
                             <h1 class="text-center" id="uberschrift_c1">Entdecke LeckerBag, deine Pausenzeit</h1>
-                            <hr id="hr_c1"/>                             
-                            <p class="MsoNormal text-center" id="lauftext_c1" data-pg-collapsed><font style="font-weight:500">LeckerBag</font> ist Deutschlands erster Frühstücks Lieferservice <font style="font-weight:500">speziell für Schulkinder.</font><br>Ausgewählte Bäckereien liefern Deinem Kind ein
+                            <hr id="hr_c1">                             
+                            <p class="MsoNormal text-center" id="lauftext_c1" data-pg-collapsed=""><font style="font-weight:500">LeckerBag</font> ist Deutschlands erster frühstücks Lieferservice <font style="font-weight:500">speziell für Schulkinder.</font><br>Ausgewählte Bäckereien liefern Deinem Kind ein
 								individuelles und gesundes Frühstück.<br>Bestelle online und Dein Kind
-								erhält sein Frühstück <font style="font-weight:500">täglich frisch</font>, direkt in der teilnehmende Schule.</p>
+								erhält sein Frühstück <font style="font-weight:500">täglich frisch</font>, direkt in der teilnehmenden Schule.</p>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 text-center">
                             <button type="button" class="btn btn-default button_paulo">Erfahre mehr</button>
-                            <button type="button" class="btn btn-default button_paulo_2">Registriere dich</button>
+                            <button type="button" class="btn btn-default button_paulo_2" onclick="location.href='registrierung.html'">Registriere dich</button>
                         </div>
                     </div>
                     <div class="row" id="startseite_c2"></div>
                     <div class="row" id="startseite_c3" data-pg-collapsed>
                         <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-                            <h2 class="text-center" id="uberschrift_c3">Unser Prinzip - so funktioniert's</h2> 
+                            <h2 class="text-center" id="uberschrift_c3">Unser Prinzip - so funktionierts</h2> 
                         </div>
                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12">
                             <h3 class="text-center"><i class="fa fa-3x fa-star">&nbsp;</i><br></h3> 
@@ -137,7 +137,7 @@
                                                 <p class="carousel-kundenname">Andrea Schneider</p>
                                             </div>
                                             <div class="item">
-                                                <p class="carousel-text">„Es gefällt uns Alles“</p>
+                                                <p class="carousel-text">„Es gefällt uns alles“</p>
                                                 <p class="carousel-kundenname">Dagmar Lohaus</p>
                                             </div>
                                             <div class="item">
